# donostia-dataviz

./: .gitattributes  .gitignore  BACKLOG.md  README.md
analysis/: airbnb_snapshots.py  (+24 more)
data-pipeline/: pyproject.toml
data-pipeline/src/donostia_pipeline/: build.py  export_tables.py  provenance.py  spatial.py
data-pipeline/tests/: conftest.py  test_aemet_climate.py  test_affordability_index.py  test_barrio_profiles.py  test_calles_vut.py  test_change_velocity.py  test_demografia_edad.py  test_demografia_origen_region.py  test_doc_counts.py  test_educacion_gis.py  test_empleo_nacionalidad_gipuzkoa.py  test_estudios.py  test_fiscalidad.py  test_ine_eoh.py  test_mice.py  test_modelos_linguisticos.py  test_movilidad_laboral.py  test_origen_paises_barrio.py  test_precio_venta.py  test_provenance.py  test_reate_licencias.py  test_renta_trabajo.py  test_residuos.py  test_ruido_gis.py  test_salud_gis.py  test_seguridad.py  test_spatial.py  test_tejido_comercial.py  test_tipologia_comercial.py  test_transformation.py  test_vpo_etxebide.py  test_vut_density.py
donostia-dataviz/data-pipeline/: pyproject.toml
donostia-dataviz/data-pipeline/curated/: mice_donostia.csv
donostia-dataviz/data-pipeline/tests/: test_aemet_climate.py  test_airbnb.py  test_change_velocity.py  test_config.py  test_contract.py  test_demografia.py  test_export.py  test_geometry.py  test_gis_io.py  test_housing_tension.py  test_ibiltur.py  test_ine_eoh.py  test_model.py  test_paro.py  test_rent.py  test_renta.py  test_spatial.py  test_tejido_comercial.py  test_transformation.py  test_vut_density.py
(+365 files in other folders)
