[project]
name = "donostia-pipeline"
version = "0.1.0"
description = "Data pipeline for the Donostia Dataviz site: raw public sources -> cleaned JSON."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "shapely>=2.0",
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
